deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"hello:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"hello\")].image"}]'
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  labels:
    app: hello
    app.kubernetes.io/component: hello
    app.kubernetes.io/instance: hello
  name: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: hello
  strategy: {}
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deployment: hello
    spec:
      containers:
        - image: " "
          name: hello
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
status: {}
