service.yaml
apiVersion: v1
kind: Service
metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: hello
      app.kubernetes.io/component: hello
      app.kubernetes.io/instance: hello
    name: hello
spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deployment: hello
status:
    loadBalancer: {}
