route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: hello
  name: hello
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: hello
    weight: 100
  wildcardPolicy: None
status: {}
